[gd_scene load_steps=12 format=2]

[ext_resource path="res://Generators/SpaceBackground/BackgroundGenerator/BackgroundGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://Generators/SpaceBackground/GUI/GUI.gd" type="Script" id=2]
[ext_resource path="res://Generators/SpaceBackground/GUI/SchemeSelectButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Generators/SpaceBackground/GUI/Theme.tres" type="Theme" id=4]
[ext_resource path="res://Generators/SpaceBackground/GUI/slkscre.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Generators/SpaceBackground/GUI/FontSmall.tres" type="DynamicFont" id=6]
[ext_resource path="res://Generators/SpaceBackground/GUI/FontSmaller.tres" type="DynamicFont" id=7]
[ext_resource path="res://Generators/SpaceBackground/GUI/transparent.png" type="Texture" id=8]

[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("Viewport")

[sub_resource type="DynamicFont" id=2]
size = 17
extra_spacing_top = 4
extra_spacing_bottom = 2
extra_spacing_char = -3
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.305882, 0.286275, 0.372549, 1 )

[node name="GUI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
script = ExtResource( 2 )

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 3000, 3000 )
own_world = true
transparent_bg = true
hdr = false
disable_3d = true
usage = 1
render_target_v_flip = true
gui_snap_controls_to_pixels = false

[node name="BackgroundGenerator" parent="Viewport" instance=ExtResource( 1 )]

[node name="Camera1" type="Camera2D" parent="Viewport"]
offset = Vector2( 50, 50 )
current = true
zoom = Vector2( 0.1, 0.1 )

[node name="Camera2" type="Camera2D" parent="Viewport"]
anchor_mode = 0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="HBoxContainer"]
margin_right = 600.0
margin_bottom = 600.0
rect_min_size = Vector2( 600, 600 )

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/Control"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0313726, 0.0784314, 0.117647, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect2" type="TextureRect" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 8 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="HBoxContainer"]
margin_left = 600.0
margin_right = 640.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0.0313726, 0.0784314, 0.117647, 1 )

[node name="Settings" type="VBoxContainer" parent="HBoxContainer/ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="HBoxContainer/ColorRect/Settings"]
margin_right = 142.0
margin_bottom = 14.0
text = "new image"

[node name="Spacer" type="Control" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 16.0
margin_right = 142.0
margin_bottom = 21.0
rect_min_size = Vector2( 0, 5 )

[node name="Label" type="Label" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 23.0
margin_right = 142.0
margin_bottom = 37.0
text = "Size (Pixels):"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 39.0
margin_right = 142.0
margin_bottom = 53.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/ColorRect/Settings/HBoxContainer"]
margin_right = 69.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "width:"

[node name="PixelsWidth" type="SpinBox" parent="HBoxContainer/ColorRect/Settings/HBoxContainer"]
margin_left = 73.0
margin_right = 142.0
margin_bottom = 14.0
size_flags_horizontal = 3
min_value = 100.0
max_value = 3000.0
value = 200.0

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 55.0
margin_right = 142.0
margin_bottom = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HBoxContainer/ColorRect/Settings/HBoxContainer2"]
margin_right = 69.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "height:"

[node name="PixelsHeight" type="SpinBox" parent="HBoxContainer/ColorRect/Settings/HBoxContainer2"]
margin_left = 73.0
margin_right = 142.0
margin_bottom = 14.0
size_flags_horizontal = 3
min_value = 100.0
max_value = 3000.0
value = 200.0

[node name="Spacer2" type="Control" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 71.0
margin_right = 142.0
margin_bottom = 76.0
rect_min_size = Vector2( 0, 5 )

[node name="Label2" type="Label" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 78.0
margin_right = 142.0
margin_bottom = 92.0
text = "colorscheme:"

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 94.0
margin_right = 142.0
margin_bottom = 471.0
rect_min_size = Vector2( 0, 50 )
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/ColorRect/Settings/ScrollContainer"]
margin_right = 178.0
margin_bottom = 84.0
size_flags_horizontal = 3
custom_constants/separation = 2

[node name="Button" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_right = 178.0
margin_bottom = 2.0
custom_fonts/font = ExtResource( 6 )
text = "NYX8"

[node name="Button4" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 4.0
margin_right = 178.0
margin_bottom = 6.0
custom_fonts/font = ExtResource( 6 )
text = "AMMO-8"

[node name="Button9" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 8.0
margin_right = 178.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 7 )
text = "winter wonderland"

[node name="Button11" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 18.0
margin_right = 178.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 6 )
text = "borkfest"

[node name="Button10" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 22.0
margin_right = 178.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 2 )
text = "submerged chimera"

[node name="Button6" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 48.0
margin_right = 178.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 6 )
text = "DREAMSCAPE8"

[node name="Button8" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 52.0
margin_right = 178.0
margin_bottom = 54.0
custom_fonts/font = ExtResource( 6 )
text = "coffee"

[node name="Button5" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 56.0
margin_right = 178.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 6 )
text = "FUNKYFUTURE8"

[node name="Button3" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 60.0
margin_right = 178.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 6 )
text = "POLLEN8"

[node name="Button7" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 64.0
margin_right = 178.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 6 )
text = "Rust gold 8"

[node name="Button2" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 68.0
margin_right = 178.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 6 )
text = "SLSO8"

[node name="Button12" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 72.0
margin_right = 178.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 7 )
text = "Goosebumps gold"

[node name="Button13" parent="HBoxContainer/ColorRect/Settings/ScrollContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 82.0
margin_right = 178.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 6 )
text = "OIL6"

[node name="Spacer3" type="Control" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 473.0
margin_right = 142.0
margin_bottom = 478.0
rect_min_size = Vector2( 0, 5 )

[node name="GridContainer" type="GridContainer" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 480.0
margin_right = 142.0
margin_bottom = 536.0
columns = 2

[node name="EnableStars" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_right = 71.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_styles/hover_pressed = SubResource( 3 )
pressed = true
text = "stars"

[node name="EnableDust" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_left = 75.0
margin_right = 142.0
margin_bottom = 16.0
size_flags_horizontal = 3
custom_styles/hover_pressed = SubResource( 3 )
pressed = true
text = "dust"

[node name="EnableNebulae" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_top = 20.0
margin_right = 71.0
margin_bottom = 36.0
custom_styles/hover_pressed = SubResource( 3 )
pressed = true
text = "nebulae"

[node name="EnablePlanets" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_left = 75.0
margin_top = 20.0
margin_right = 142.0
margin_bottom = 36.0
custom_styles/hover_pressed = SubResource( 3 )
pressed = true
text = "planets"

[node name="EnableTile" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_top = 40.0
margin_right = 71.0
margin_bottom = 56.0
custom_styles/hover_pressed = SubResource( 3 )
text = "tile"

[node name="EnableReduceBackground" type="CheckBox" parent="HBoxContainer/ColorRect/Settings/GridContainer"]
margin_left = 75.0
margin_top = 40.0
margin_right = 142.0
margin_bottom = 56.0
custom_styles/hover_pressed = SubResource( 3 )
text = "darken"

[node name="Spacer5" type="Control" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 538.0
margin_right = 142.0
margin_bottom = 539.0
rect_min_size = Vector2( 0, 1 )

[node name="EnableTransparency" type="CheckBox" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 541.0
margin_right = 142.0
margin_bottom = 557.0
custom_styles/hover_pressed = SubResource( 3 )
text = "Transparency"

[node name="Spacer4" type="Control" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 559.0
margin_right = 142.0
margin_bottom = 564.0
rect_min_size = Vector2( 0, 5 )

[node name="ExportButton" type="Button" parent="HBoxContainer/ColorRect/Settings"]
margin_top = 566.0
margin_right = 142.0
margin_bottom = 580.0
text = "export"

[node name="SaveTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/NewButton" to="." method="_on_NewButton_pressed"]
[connection signal="value_changed" from="HBoxContainer/ColorRect/Settings/HBoxContainer/PixelsWidth" to="." method="_on_PixelsWidth_value_changed"]
[connection signal="value_changed" from="HBoxContainer/ColorRect/Settings/HBoxContainer2/PixelsHeight" to="." method="_on_PixelsHeight_value_changed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableStars" to="." method="_on_EnableStars_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableDust" to="." method="_on_EnableDust_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableNebulae" to="." method="_on_EnableNebulae_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnablePlanets" to="." method="_on_EnablePlanets_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableTile" to="." method="_on_EnableTile_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/GridContainer/EnableReduceBackground" to="." method="_on_EnableReduceBackground_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/EnableTransparency" to="." method="_on_EnableTransparency_pressed"]
[connection signal="pressed" from="HBoxContainer/ColorRect/Settings/ExportButton" to="." method="_on_ExportButton_pressed"]
[connection signal="timeout" from="SaveTimer" to="." method="_on_SaveTimer_timeout"]
